--- a/fantasy_data/Vagrantfile
+++ b/fantasy_data/Vagrantfile
@@ -20,10 +20,9 @@ Vagrant.configure("2") do |config|
             v.cpus = 2
         end
 
-        config.vm.provision :shell do |s|
-            s.path = "./provision/bootstrap.sh"
-            s.path = "./provision/app.sh"
-        end
+        config.vm.provision :shell, path: "./provision/bootstrap.sh"
+        config.vm.provision :shell, path: "./provision/nginx.sh"
+        config.vm.provision :shell, path: "./provision/app.sh"
     end
 
 
@@ -45,10 +44,9 @@ Vagrant.configure("2") do |config|
             v.cpus = 2
         end
 
-        config.vm.provision :shell do |s|
-            s.path = "./provision/bootstrap.sh"
-            s.path = "./provision/proxy.sh"
-        end
+        config.vm.provision :shell, path: "./provision/bootstrap.sh"
+        config.vm.provision :shell, path: "./provision/nginx.sh"
+        config.vm.provision :shell, path: "./provision/proxy.sh"
     end
 
 end
